<resources>
    <string name="app_name">Waves of Food</string>
    <string name="next">Next</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="waves_of_food">Waves of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
</resources>